# clutter_butter

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  doxygen.config  package.xml  readme.md
data/: smallworld.pgm  smallworld.xcf  smallworld.yaml
demo/: run-two-toys.sh
design/: Design.docx
docs/html/: annotated.html  classObstacleDetector-members.html  classObstacleDetector.html  classOdomTracker-members.html  classOdomTracker.html  classPushExecutor-members.html  classPushExecutor.html  classPushPlanner-members.html  classPushPlanner.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  obstacle__detector_8cpp.html  obstacle__detector_8h.html  obstacle__detector_8h_source.html  odom__tracker_8cpp.html  odom__tracker_8h.html  odom__tracker_8h_source.html  push__executor_8cpp.html  push__executor_8h.html  push__executor_8h_source.html  push__executor__test_8cpp.html  push__planner_8cpp.html  push__planner_8h.html  push__planner_8h_source.html  push__planner__test_8cpp.html
docs/html/search/: all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  search.js
docs/latex/: annotated.tex  classObstacleDetector.tex  classOdomTracker.tex  classPushExecutor.tex  classPushPlanner.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  obstacle__detector_8cpp.tex  obstacle__detector_8h.tex  odom__tracker_8cpp.tex  odom__tracker_8h.tex  push__executor_8cpp.tex  push__executor_8h.tex  push__executor__test_8cpp.tex  push__planner_8cpp.tex  push__planner_8h.tex  push__planner__test_8cpp.tex  refman.tex
include/clutter_butter/: push_planner.h
launch/: debug.launch  demo.launch  single-toy.launch  two_toy_world.launch.xml
msg/: PushPlan.msg  Target.msg
results/: cppchecks.txt  cpplint.txt
src/: obstacle_detector.cpp  obstacle_detector.h  odom_tracker.cpp  odom_tracker.h  push_executor.cpp  push_executor.h  push_planner.cpp  push_planner.h  walker.cpp  walker.h
srv/: GetPushPlan.srv  GoTo.srv  Orient.srv  SetMapWalkerState.srv  SetPushExecutorState.srv
test/: push_executor_test.cpp  push_executor_test.launch  push_planner_test.cpp  push_planner_test.launch  utest.cpp  utest.launch
worlds/: walled_empty.world.xml  walled_one_toy.world.xml  walled_two_toy.world.xml
